# ChangeLog for sys-kernel/development-sources
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/development-sources/Attic/ChangeLog,v 1.120 2004/07/09 11:20:54 spock Exp $

  09 Jul 2004; Michal Januszewski <spock@gentoo.org>
  -development-sources-2.6.7_rc1.ebuild,
  -development-sources-2.6.7_rc2.ebuild,
  -development-sources-2.6.7_rc3.ebuild:
  Removed 2.6.7 -rc ebuilds.

  05 Jul 2004; Michal Januszewski <spock@gentoo.org>
  development-sources-2.6.7.ebuild:
  Stable on x86.

  04 Jul 2004; Keith M Wesolowski <wesolows@gentoo.org>
  development-sources-2.6.7.ebuild:
  development-sources-2.6.7.ebuild

*development-sources-2.6.7 (16 Jun 2004)

  16 Jun 2004; Michal Januszewski <spock@gentoo.org>
  +development-sources-2.6.7.ebuild:
  Version bump.

  13 Jun 2004; Dylan Carlson <absinthe@gentoo.org>
  development-sources-2.6.5.ebuild, development-sources-2.6.6.ebuild,
  development-sources-2.6.6_rc1.ebuild, development-sources-2.6.6_rc2.ebuild,
  development-sources-2.6.6_rc3.ebuild, development-sources-2.6.7_rc1.ebuild,
  development-sources-2.6.7_rc2.ebuild, development-sources-2.6.7_rc3.ebuild:
  Keywords ~amd64.

  08 Jun 2004; Konstantin Arkhipov <voxus@gentoo.org>
  +development-sources-2.6.7_rc3.ebuild
  Version bump.

  31 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  development-sources-2.6.1.ebuild, development-sources-2.6.2.ebuild,
  development-sources-2.6.3.ebuild, development-sources-2.6.6.ebuild,
  development-sources-2.6.6_rc1.ebuild, development-sources-2.6.6_rc3.ebuild,
  development-sources-2.6.7_rc1.ebuild, development-sources-2.6.7_rc2.ebuild:
  Masked development-sources-2.6.7_rc2.ebuild testing for ppc

  31 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  development-sources-2.6.1.ebuild, development-sources-2.6.2.ebuild,
  development-sources-2.6.3.ebuild, development-sources-2.6.6.ebuild,