@@ -1,18 +1,20 @@
-MD5 88f17719957f009d1e0d4f93e1bd01a2 development-sources-2.6.6.ebuild 997
-MD5 233ce91e4e2f68bac1e37c71e90927fa development-sources-2.6.1.ebuild 878
-MD5 a834fdec25fb7843a2235104fbb4b7b9 development-sources-2.6.3.ebuild 1366
-MD5 eeceb31d16d4879c28142757eaf36379 development-sources-2.6.5.ebuild 1395
-MD5 2ec65db7c162650b6cbedcd55b3db2d3 development-sources-2.6.7.ebuild 970
-MD5 a773ac7b340d580134af4ba7100516a9 development-sources-2.6.2.ebuild 878
-MD5 13aade01932652aa84942ee046e28893 development-sources-2.6.4.ebuild 993
 MD5 179e0921338cf9e823626d1043bee84e ChangeLog 22192
+MD5 233ce91e4e2f68bac1e37c71e90927fa development-sources-2.6.1.ebuild 878
+MD5 a773ac7b340d580134af4ba7100516a9 development-sources-2.6.2.ebuild 878
+MD5 a834fdec25fb7843a2235104fbb4b7b9 development-sources-2.6.3.ebuild 1366
+MD5 13aade01932652aa84942ee046e28893 development-sources-2.6.4.ebuild 993
+MD5 eeceb31d16d4879c28142757eaf36379 development-sources-2.6.5.ebuild 1395
 MD5 b23303138c4b33e5712b26f169f96a0e metadata.xml 564
+MD5 2ec65db7c162650b6cbedcd55b3db2d3 development-sources-2.6.7.ebuild 970
 MD5 491e6628b32611d0895019347db2a636 development-sources-2.6.6_rc2.ebuild 539
+MD5 9a659f246b0346e16cb67c50a9a8fd76 development-sources-2.6.7-r1.ebuild 465
+MD5 88f17719957f009d1e0d4f93e1bd01a2 development-sources-2.6.6.ebuild 997
 MD5 1f7aaa49614b3055b6110518b1ed23ee files/digest-development-sources-2.6.1 66
 MD5 e1bd515be1e1499b9444d688a7b2dc6e files/digest-development-sources-2.6.2 66
 MD5 2848759525b1e663560b02011e136a93 files/digest-development-sources-2.6.3 137
 MD5 20cc6e125294f0ea7095e1decb12ca9f files/digest-development-sources-2.6.4 137
 MD5 4630a6aa6f2b0a0dd74d45ed0f2cba3a files/digest-development-sources-2.6.5 208
-MD5 214f14a8b49844fc44f74d8ab84019de files/digest-development-sources-2.6.6 137
 MD5 23e1b75850b5a41b95c65e7771f39c48 files/digest-development-sources-2.6.7 137
 MD5 67df71a3070cd51aeacd4db0b07dce93 files/digest-development-sources-2.6.6_rc2 131
+MD5 b405a908c2cc1e6ed3e25f030c41f4c4 files/digest-development-sources-2.6.7-r1 66
+MD5 214f14a8b49844fc44f74d8ab84019de files/digest-development-sources-2.6.6 137
