@@ -1,6 +1,15 @@
 # ChangeLog for sys-kernel/development-sources
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/development-sources/Attic/ChangeLog,v 1.120 2004/07/09 11:20:54 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/development-sources/Attic/ChangeLog,v 1.121 2004/07/09 20:48:57 gregkh Exp $
+
+*development-sources-2.6.7-r1 (09 Jul 2004)
+
+  09 Jul 2004; Greg Kroah-Hartman <gregkh@gentoo.org>
+  +development-sources-2.6.7-r1.ebuild:
+  ripped out the sparc specific patch.
+  This package is for the generic kernel.org kernel ONLY!
+  The arch specific stuff needs to go into either gentoo-dev-sources
+  or their own kernel package.
 
   09 Jul 2004; Michal Januszewski <spock@gentoo.org>
   -development-sources-2.6.7_rc1.ebuild,
